--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ djangorestframework==3.9.4
 gunicorn==19.9.0
 mysqlclient==1.4.2.post1
 Pillow==6.0.0
+psycopg2-binary==2.8.3
 pytz==2019.1
 sqlparse==0.3.0
 whitenoise==4.1.2
-psycopg2-binary
